# xiangqi-gui

./: README.md  main.py  package.xml  requirements.txt  saved_position.fen  setup.py  shared_game_state.json  test_signal.py
config/: engines.json  settings.py
docs/: ROS_INTEGRATION.md
engines/: README.md
engines/Pikafish/: pikafish
src/: __init__.py
src/core/: __init__.py  game_state.py
src/engine/: __init__.py  multi_engine_manager.py  ucci_protocol.py
src/gui/: __init__.py  board_widget.py  game_info_widget.py  main_window.py  multi_engine_widget.py  setup_widget.py
src/gui/dialogs/: __init__.py  fen_dialog.py
src/ros/: ros_controller.py
src/utils/: constants.py  shared_state.py  svg_renderer.py
tests/: test_ros_service.py  test_shared_state.py
xiangqi_gui/: ros_service_node.py
