<?xml version="1.0"?>
<?xml version="1.0"?>
<package format="3">
    <name>xiangqi_gui</name>
    <version>1.0.0</version>
    <description>Xiangqi GUI with ROS2 integration</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>MIT</license>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package> 